--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2>Get In Touch</h2>
             <h3>If You Love Coding as much as I do!</h3>
             <p class="contact-message">Let's find out whether we can vibe with the same interest in each other's skills!!</p>
-            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+            <a class="btn" href="mailto:kaustuubhghare@gmail.com">CONTACT ME</a>
     </div>
   </div>
     
